# star-trek-attack-wing

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
assets/: main.css  tailwind.css
src/: main.rs
src/components/: mod.rs  pannable_space.rs
src/game/: config.rs  mod.rs  state.rs
src/game/factions/: mod.rs  sets.rs
src/game/factions/bajoran/: mod.rs
src/game/factions/federation/: ship.rs
src/game/factions/ferengi/: mod.rs
src/game/factions/ship/: mod.rs  ship_class.rs
src/game/factions/ship/ability/: ability_empty.rs  ability_s001.rs  ability_s002.rs  ability_s004.rs  ability_s005.rs  ability_s006.rs  ability_s008.rs  ability_s010.rs  ability_s011.rs  ability_s012.rs  ability_s013.rs  ability_s014.rs  ability_s016.rs  ability_s017.rs  ability_s019.rs  ability_s020.rs  ability_s021.rs  ability_s022.rs  ability_s023.rs  ability_s025.rs  ability_s026.rs  ability_s027.rs  ability_s029.rs  ability_s030.rs  ability_s031.rs  ability_s032.rs  ability_s033.rs  ability_s034.rs  ability_s035.rs  ability_s037.rs  ability_s038.rs  ability_s039.rs  ability_s040.rs  ability_s041.rs  ability_s043.rs  ability_s044.rs  ability_s047.rs  ability_s048.rs  ability_s049.rs  ability_s050.rs  (+209 more)
src/game/factions/upgrade/: mod.rs  part_1.rs  part_2.rs  part_3.rs
src/game/stage/: build.rs  deploy.rs  mod.rs  setup.rs
