[package]
name = "star-trek-attack-wing"
version = "0.1.0"
authors = ["Hugh Kaznowski <hugh@rapidrecast.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-desktop = { version = "0.6.3", optional = true }
dioxus-mobile = { version = "0.6.2", optional = true }
dioxus-web = { version = "0.6.3", optional = true }
lazy_static = "1.5.0"
nostd_structs = "0.5.0"
rgeometry = "0.10.2"

[features]
default = ["desktop"]
web = ["dioxus/web", "dioxus-web"]
desktop = ["dioxus/desktop", "dioxus-desktop"]
mobile = ["dioxus/mobile", "dioxus-mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
